# libtinyiiod

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile_iio.variables  README.md  azure-pipelines.yml  compat.h  example.c  lexer.l  parser.c  parser.y  src.mk  tinyiiod-private.h  tinyiiod.c  tinyiiod.h
ci/: run_build.sh
ci/travis/: build_project.sh  run_build.sh
cmake/: tinyiiodConfig.cmake
